fixed navbar elements alignment

--- a/css/index.css
+++ b/css/index.css
@@ -346,6 +346,7 @@ th:nth-child(3) { width: 15%; }
 .counter-tooltip {
   position: absolute;
   top: -110px;
+  left: -5px;
   text-align: left;
   width: 130px;
   line-height: 1.7 !important;
